@@ -5,7 +5,7 @@
 #      Public License or the SkunkWeb License, as specified in the
 #      README file.
 #   
-# $Id: requestHandler.py,v 1.8 2003/05/01 20:45:54 drew_csillag Exp $
+# $Id: requestHandler.py,v 1.9 2003/05/02 13:27:12 drew_csillag Exp $
 # Time-stamp: <01/05/09 17:48:12 smulloni>
 ########################################################################
 
@@ -34,9 +34,9 @@ EndSession=KeyedHook()
 
 def _processRequest(sock, addr, protocolImpl):
     
-    DEBUG(REQUESTHANDLER, "in _processRequest(%s, %s, %s)" % (sock,
-                                                              addr,
-                                                              protocolImpl))
+#    DEBUG(REQUESTHANDLER, "in _processRequest(%s, %s, %s)" % (sock,
+#                                                              addr,
+#                                                              protocolImpl))
     requestData, responseData, sessionDict=None, None, {}
     _beginSession(sock, sessionDict)
     
@@ -50,38 +50,38 @@ def _processRequest(sock, addr, protocolImpl):
             signal.alarm(Configuration.DocumentTimeout)
             try:
                 try:
-                    DEBUG(REQUESTHANDLER, 'marshalling request')
+#                    DEBUG(REQUESTHANDLER, 'marshalling request')
                     requestData = protocolImpl.marshalRequest(sock, sessionDict)
 
-                    DEBUG(REQUESTHANDLER, 'InitRequest hook')
+#                    DEBUG(REQUESTHANDLER, 'InitRequest hook')
                     InitRequest(Configuration.job, requestData, sessionDict)
                     
                 except PreemptiveResponse, pr:
-                    DEBUG(REQUESTHANDLER, 'got preemptive response')
+#                    DEBUG(REQUESTHANDLER, 'got preemptive response')
                     responseData=protocolImpl.marshalResponse(pr.responseData,
                                                               sessionDict)
                     
                 else:
-                    DEBUG(REQUESTHANDLER, 'handling request')
+#                    DEBUG(REQUESTHANDLER, 'handling request')
                     rawResponse=HandleRequest(Configuration.job,
                                               requestData,
                                               sessionDict)
 
-                    DEBUG(REQUESTHANDLER, 'response returned: %s' % str(rawResponse))
-                    DEBUG(REQUESTHANDLER, 'marshalling response')
+#                    DEBUG(REQUESTHANDLER, 'response returned: %s' % str(rawResponse))
+#                    DEBUG(REQUESTHANDLER, 'marshalling response')
                     responseData=protocolImpl.marshalResponse(rawResponse,
                                                               sessionDict)
             except:
                 try:
                     # the current exception is available anyway, so is not passed;
                     # perhaps nothing should be
-                    DEBUG(REQUESTHANDLER, 'marshalling exception')
+#                    DEBUG(REQUESTHANDLER, 'marshalling exception')
                     responseData=protocolImpl.marshalException(logException(),
                                                                sessionDict)
                 except:
                     logException()
         finally:     
-            DEBUG(REQUESTHANDLER, 'sending response')
+#            DEBUG(REQUESTHANDLER, 'sending response')
             _sendResponse(sock,
                           responseData,
                           requestData,
@@ -109,7 +109,7 @@ def _canRead(sock, timeout):
                                      [],
                                      [],
                                      timeout)
-    DEBUG(REQUESTHANDLER, "input for _canRead select: %s" % input)
+#    DEBUG(REQUESTHANDLER, "input for _canRead select: %s" % input)
     # sanity check
     try:
         if input and not input[0].recv(1, socket.MSG_PEEK):
@@ -182,12 +182,12 @@ def _sendResponse(sock,
     signal.alarm(Configuration.PostResponseTimeout)
     
     try:
-        DEBUG(REQUESTHANDLER, 'post request hook')
+#        DEBUG(REQUESTHANDLER, 'post request hook')
         PostRequest(Configuration.job, requestData, sessionDict)
     except:
         logException()                
     try:
-        DEBUG(REQUESTHANDLER, "cleaning up")
+#        DEBUG(REQUESTHANDLER, "cleaning up")
         CleanupRequest(Configuration.job, requestData, sessionDict)
     except:
         logException()
@@ -230,7 +230,7 @@ class RequestHandler:
             Server.addService(tuple(bits), self)
             
     def __call__(self, sock, addr):
-        DEBUG(REQUESTHANDLER, "calling RequestHandler %s" % self)    
+#        DEBUG(REQUESTHANDLER, "calling RequestHandler %s" % self)    
         _processRequest(sock, addr, self.protocol)
  
 ########################################################################
@@ -239,119 +239,3 @@ class RequestHandler:
 def addRequestHandler(protocol, ports):
     RequestHandler(protocol, ports)
 
-########################################################################
-# $Log: requestHandler.py,v $
-# Revision 1.8  2003/05/01 20:45:54  drew_csillag
-# Changed license text
-#
-# Revision 1.7  2003/04/16 14:42:33  drew_csillag
-# now ignores some non-erroneous exceptions
-#
-# Revision 1.6  2002/06/19 13:37:43  smulloni
-# some pychecker-inspired fixes.
-#
-# Revision 1.5  2002/06/18 20:09:59  drew_csillag
-# SkunkExcept
-# 	wasn't imported so could cause problems in certain cases, fixed.
-#
-# Revision 1.4  2002/06/12 18:00:41  drew_csillag
-# Now will reraise the timeout exception every second after a timeout occurs
-# in the hopes that if they ignore the first one, subsequent throws won't be
-# caught.  Also lets the template try to deal with timeouts a bit better should
-# they choose to do so.
-#
-# Revision 1.3  2001/10/30 15:40:11  drew_csillag
-# fixed a debug message so it won't barf on a tuple
-#
-# Revision 1.2  2001/10/02 00:06:35  smulloni
-# fixes for unix sockets, which were broken due to profound cognitive
-# impairment.
-#
-# Revision 1.1.1.1  2001/08/05 15:00:05  drew_csillag
-# take 2 of import
-#
-#
-# Revision 1.22  2001/07/09 20:38:40  drew
-# added licence comments
-#
-# Revision 1.21  2001/05/09 21:47:05  smullyan
-# added sanity check after select, peeking one byte ahead on the socket, in
-# _canRead.
-#
-# Revision 1.20  2001/05/09 19:42:25  smullyan
-# added two new hooks, BeginSession and EndSession.
-#
-# Revision 1.19  2001/05/04 18:38:50  smullyan
-# architectural overhaul, possibly a reductio ad absurdum of the current
-# config overlay technique.
-#
-# Revision 1.18  2001/05/03 17:26:11  smullyan
-# added an IP pseudo-directive to SkunkWeb.ConfigAdditives; Host now matches
-# strictly (perhaps it should be a glob); port and ip are now put in
-# sessionDict by requestHandler; HTTPConnection's "host" field is now the host
-# header, if any, with the port removed.
-#
-# Revision 1.17  2001/05/03 16:14:58  smullyan
-# modifications for scoping.
-#
-# Revision 1.16  2001/04/25 20:18:46  smullyan
-# moved the "experimental" services (web_experimental and
-# templating_experimental) back to web and templating.
-#
-# Revision 1.15  2001/04/23 22:53:55  smullyan
-# added support for keep-alive.  Fixed server name (I had left out "SkunkWeb"
-# and only included the version).
-#
-# Revision 1.14  2001/04/23 17:30:08  smullyan
-# basic fixes to basic auth and httpd; added KeepAliveTimeout to requestHandler,
-# using select().
-#
-# Revision 1.13  2001/04/23 04:55:47  smullyan
-# cleaned up some older code to use the requestHandler framework; modified
-# all hooks and Protocol methods to take a session dictionary argument;
-# added script to find long lines to util.
-#
-# Revision 1.12  2001/04/18 22:46:26  smullyan
-# first gropings towards a web server.
-#
-# Revision 1.11  2001/04/16 17:52:59  smullyan
-# some long lines split; bug in Server.py fixed (reference to deleted
-# Configuration module on reload); logging of multiline messages can now
-# configurably have or not have a log stamp on every line.
-#
-# Revision 1.10  2001/04/04 20:00:18  smullyan
-# The configuration setting, DocumentTimeout, was being used in requestHandler
-# while its default was being set in templating_experimental -- fixed.  The
-# alarm is now reset after the response is set, and a PostResponseTimeout
-# takes over for the remaining two hooks.
-#
-# Revision 1.9  2001/04/04 16:28:02  smullyan
-# CodeSources.py wasn't calling the installIntoTraceback function; fixed.
-# Remote service now handles exceptions better.  Code equivalent to that in
-# test.py will need to become part of the templating_experimental service.
-#
-# Revision 1.8  2001/04/04 14:46:29  smullyan
-# moved KeyedHook into SkunkWeb.Hooks, and modified services to use it.
-#
-# Revision 1.7  2001/04/02 22:31:41  smullyan
-# bug fixes.
-#
-# Revision 1.6  2001/04/01 07:27:34  smullyan
-# after various wacky experiments, moved a prototype of a new hook
-# implementation into requestHandler.hooks.py.
-#
-# Revision 1.5  2001/03/31 06:13:37  smullyan
-# more reworking of keyed hooks.
-#
-# Revision 1.4  2001/03/29 23:02:25  smullyan
-# annotated job.py with indications of grandiose plans.  Job integration.
-#
-# Revision 1.3  2001/03/29 21:54:24  smullyan
-# removed dead method from Protocol.
-#
-# Revision 1.2  2001/03/29 21:47:52  smullyan
-# first integration of jobs into requestHandler.
-#
-# Revision 1.1  2001/03/29 20:17:10  smullyan
-# experimental, non-working code for requestHandler and derived services.
-#
